--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -373,3 +373,8 @@ body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2p
 optgroup option {
     margin-left: 1em;
 }
+
+@media screen and (max-width: 1415px) 
+{
+    .orders-nav-review { display: none;}
+}
