Hide review page nav is not wide enough

--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -374,3 +374,7 @@ optgroup option {
     margin-left: 1em;
 }
 
+@media screen and (max-width: 1415px)
+{
+    .orders-nav-review { display: none;} 
+} 
