Added icon to list page for sync management

--- a/Purchasing.Web/Views/Workgroup/Details.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Details.cshtml
@@ -207,7 +207,7 @@
 
 <section class="display-form ui-corner-all box-shadow">
 
-    <header class="ui-corner-top ui-widget-header">Workgroup People</header>
+    <header class="ui-corner-top ui-widget-header">Workgroup People <a href="#">Manage Sync Permissions</a></header>
 
     <div class="section-contents workgroup-people">
     
