DB Updated. Added fields to Order and ColumnPrefs. Added partial view.

--- a/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
@@ -39,7 +39,7 @@
 @if (Model.CanCancelCompletedOrder)
 {
     <section class="ui-corner-all display-form">
-        <header class="ui-corner-top ui-widget-header">Cancel Completed Order</header>
+        <header class="ui-corner-top ui-widget-header showInNav">Cancel Completed Order</header>
         <div class="section-text">
             <p>You can cancel this completed order entering a Comment (required) and clicking "Cancel Order."</p>    
         </div>
