Code cleanup, added fpdCompleted to OrderHistory, changed Yes/No to FpdCompleted/FpdPending/NA to make it easier to search in the order history data table.

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -403,6 +403,29 @@
             }
         }
     }
+
+    if (Model.ColumnPreferences.ShowFpdCompleted)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>FPD Completed</th>");
+        }
+        else
+        {
+            if (item.FpdCompleted == "Yes")
+            {
+                result.Append("<td class='green'>FpdComplete</td>");
+            }
+            else if (item.OrderTypeId.Trim() == "PC")
+            {
+                result.Append("<td class='red'>FpdPending</td>");
+            }
+            else
+            {
+                result.Append("<td >NA</td>");
+            }
+        }
+    }
    
     @Html.Raw(result.ToString())
    
