test page works now

--- a/Purchasing.Web/Views/WorkgroupPermissions/Test.cshtml
+++ b/Purchasing.Web/Views/WorkgroupPermissions/Test.cshtml
@@ -16,11 +16,21 @@
             perm.UserId = "jsylvest";
             perm.Action = "Add";
             perm.RoleId = "AP";
-            $.post(url, { id: "022cd8a0-8237-4d0d-b7be-a92fa3d6499a", permissions: [perm] }, function (result) {
-                if (result) {
-                    alert(result.result);
-                } else {
-                    alert("There was a problem updating");
+
+            var data = { id: "022cd8a0-8237-4d0d-b7be-a92fa3d6499a", permissions: [perm] };
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                dataType: 'json',
+                data: JSON.stringify(data),
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    if (result) {
+                        alert(result.result);
+                    } else {
+                        alert("There was a problem updating");
+                    }
                 }
             });
         });
