Updated values so log will save

--- a/Purchasing.Web/Views/Workgroup/ManageSyncPermissions.cshtml
+++ b/Purchasing.Web/Views/Workgroup/ManageSyncPermissions.cshtml
@@ -115,7 +115,7 @@
                                 Date
                             </th>			
                             <th>
-                                Action
+                                Message
                             </th>
 
 
