Added some counts which may be useful in the return values.

--- a/Purchasing.Web/Views/WorkgroupPermissions/Test.cshtml
+++ b/Purchasing.Web/Views/WorkgroupPermissions/Test.cshtml
@@ -11,8 +11,7 @@
     $(function () {
         $("#test").click(function () {
             var url = '@Url.Action("Update")';
-            debugger;
-            var perm = [{ UserId: "xxxxxx", Action: "A", RoleId: "AP" }, { UserId: "xxxxxx", Action: "A", RoleId: "Ax"}];
+            var perm = [{ UserId: "jsylvest", Action: "D", RoleId: "AP" }, { UserId: "anlai", Action: "D", RoleId: "AP"},{ UserId: "jsylvest", Action: "A", RoleId: "AP" }, { UserId: "anlai", Action: "A", RoleId: "AP"}];
 
             var data = { id: "022cd8a0-8237-4d0d-b7be-a92fa3d6499a", permissions: perm };
 
