If the user clicks cancel on the order form, clear out the local storage.

--- a/Purchasing.Web/Views/Order/_Submit.cshtml
+++ b/Purchasing.Web/Views/Order/_Submit.cshtml
@@ -24,9 +24,8 @@
                     {
                         <input type="button" class="button" value="Save For Later" id="save-btn"/> <text>|</text>
                     }
-                    @Html.ActionLink("Cancel", "Landing", "Home")
+                    @Html.ActionLink("Cancel", "Landing", "Home", null, new {id="order-cancel"})
                 </div>
             </li>
         </ul>
     </div>
-</section>
