--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -404,6 +404,25 @@
         }
     }
 
+    if (Model.ColumnPreferences.ShowOrderPaid)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Paid</th>");
+        }
+        else
+        {
+            if (item.Paid == "Yes")
+            {
+                result.Append("<td class='green'>Yes</td>");
+            }
+            else
+            {
+                result.Append("<td class='red'>No</td>");
+            }
+        }
+    }    
+
     if (Model.ColumnPreferences.ShowFpdCompleted)
     {
         if (tableHeader)
