--- a/Purchasing.Web/Views/Order/SelectWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Order/SelectWorkgroup.cshtml
@@ -42,7 +42,7 @@ else
 
         
         <div class="section-text">
-            <p>You have access to multiple workgroups. Please choose the one you wish to submit this order under.</p>    
+            <p>You have access to multiple workgroups. Please choose the one you wish to save this order under.</p>    
         </div>
 
         <ul>
