--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -14,6 +14,7 @@
 @if (roles.Contains(Role.Codes.DepartmentalAdmin))
 {
     <li>@Html.ActionLink("Workload Report By Workgroup", "Workload")</li>    
+    <li>@Html.ActionLink("Processing Time Report By Workgroup", "ProcessingTime")</li>
     <li>@Html.ActionLink("Permissions Report", "Permissions")</li>
     <li>@Html.ActionLink("Orders Summary by Workgroup", "TotalByWorkgroup", new{showAdmin=false})</li>
     <li>@Html.ActionLink("Orders Summary by Primary Organization", "TotalByPrimaryOrg")</li>
