--- a/Purchasing.Web/Views/Report/Index.cshtml
+++ b/Purchasing.Web/Views/Report/Index.cshtml
@@ -9,18 +9,113 @@
     var hasAdmin = roles.Any(aRoles.Contains);
 }
 
+@section AdditionalScripts
+{
+        <style>
+        div.report-info
+        {
+            border: 1px solid #CCCCCC;
+            padding: 1em;
+            width: 180px;
+            float: left;
+            margin-right: 30px;
+            cursor: pointer;            
+        }
+        div.report-info.disable {border: 1px solid #ddd; color: #bbb; cursor: auto; box-shadow: none;}
+        div.report-info:last-child {}
+        div.report-info:hover
+        {
+            -moz-box-shadow:inset 0 0 10px lightblue;
+            -webkit-box-shadow:inset 0 0 10px lightblue;
+            box-shadow:inset 0 0 10px lightblue;
+        }
+        div.report-info.disable:hover {-moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;}
+        div.report-info ul
+        {
+            padding: 0;
+        }
+        div.report-info ul li
+        {
+            text-align: center;
+        }
+        .prop-name
+        {
+            padding: 1em;
+            color: #014A81;
+            font-weight: bold;
+        }
+        .disable .prop-name { color: #aaa; }
+        .prop-value
+        {
+            font-size: 4em;
+            font-weight: bold;
 
-<ul>
+        }
+        
+        div.report-people div.report-info {
+            width: 135px;   
+        }
+    </style>
+}
+
+
+@helper ContainerFor(string linkText, string action, bool special = false)
+{
+    if (special)
+    {
+            <a href="@Url.Action(action, "Report", new { showAdmin = false })">
+                <div class="report-info gradientbackground ui-corner-all box-shadow">
+        
+                    <ul>
+        
+                        <li class="prop-name ui-corner-all border-all blue-gradientbackground">@(linkText)</li>
+
+                    </ul>
+        
+                </div>
+            </a>  
+    }
+    else
+    {
+            <a href="@Url.Action(action, "Report")">
+                <div class="report-info gradientbackground ui-corner-all box-shadow">
+        
+                    <ul>
+        
+                        <li class="prop-name ui-corner-all border-all blue-gradientbackground">@(linkText)</li>
+
+                    </ul>
+        
+                </div>
+            </a>  
+    }
+}
+
+
 @if (roles.Contains(Role.Codes.DepartmentalAdmin))
 {
-    <li>@Html.ActionLink("Workload Report By Workgroup", "Workload")</li>    
-    <li>@Html.ActionLink("Processing Time Report By Workgroup", "ProcessingTime")</li>
-    <li>@Html.ActionLink("Permissions Report", "Permissions")</li>
-    <li>@Html.ActionLink("Orders Summary by Workgroup", "TotalByWorkgroup", new{showAdmin=false})</li>
-    <li>@Html.ActionLink("Orders Summary by Primary Organization", "TotalByPrimaryOrg")</li>
-    <li>@Html.ActionLink("Orders Summary by Vendor", "TotalByVendor")</li>
+    <section class="display-form ui-corner-all box-shadow">
+
+        <header class="ui-corner-top ui-widget-header">Reports</header>
+        <div class="section-contents">
+            @ContainerFor("Workload Report By Workgroup", "Workload")
+            @ContainerFor("Purchaser Processing Time Report By Workgroup", "ProcessingTime")
+            @ContainerFor("Permissions Report", "Permissions")
+            <div style="clear: both;"></div>
+
+        </div>
+
+    </section>
+    <section class="display-form ui-corner-all box-shadow">
+
+        <header class="ui-corner-top ui-widget-header">Order Summary Reports By</header>
+        <div class="section-contents">
+            @ContainerFor("Workgroup", "TotalByWorkgroup", special: true)
+            @ContainerFor("Primary Organization", "TotalByPrimaryOrg")
+            @ContainerFor("Vendor", "TotalByVendor")
+            <div style="clear: both;"></div>
+
+        </div>
+
+    </section>
 }
-</ul>
-
-
-
