--- a/Purchasing.Web/Views/Report/ProcessingTime.cshtml
+++ b/Purchasing.Web/Views/Report/ProcessingTime.cshtml
@@ -43,7 +43,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Index", "Report", new { @class = "button" })</li>
+		<li>@Html.ActionLink("Back to List", "Index", null, new { @class = "button" })</li>
 	</ul>
 }
 
@@ -99,12 +99,12 @@
                 <th>
                     Request Number
                 </th>
-                <th>Arrived A tPurchaser</th>
-                <th>Rerouted To PurchaserDate</th>
-                <th>Rerouted To PurchaserName</th>
-                <th>ReRouted To PurchaserBy</th>
-                <th>Completed By PurchaserDate</th>
-                <th>Completed By PurchaserName</th>
+                <th>Arrived At Purchaser</th>
+                <th>Rerouted To Purchaser Date</th>
+                <th>Rerouted To Purchaser Name</th>
+                <th>ReRouted To Purchaser By</th>
+                <th>Completed By Purchaser Date</th>
+                <th>Completed By Purchaser Name</th>
                 <th></th>
             </tr>
         </thead>
